--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -3,8 +3,7 @@
 	<div>
 		<p>How do you enjoy your daily brew? There is a rapidly growing coffe culture and various brewing methods. Are we succumbing to the allure of hipster peer pressure or do all of these intricate gadgets actually make a difference? Thus the Coffee Experiments began.</p>
 
-		<%= image_tag "collage-photo-coffee-experiments.jpg" %>
-	</div>
+		<%= image_tag "thumbs/collage-photo-coffee-experiments.jpg", :width => "700px", :title => "Oui oui, j'aime le cafe beaucoup!" %>
 	<div>
 		<h4>Experimental Variables</h4>
 
@@ -50,7 +49,7 @@
 	</p>
 
 	<div class=experimentimg>
-		<%= image_tag "coffee-experiments-aeropress-vs-pourover.jpg", :height => "300px", :title => "More like Pou rover, Am I right?" %>
+		<%= image_tag "thumbs/coffee-experiments-aeropress-vs-pourover.jpg", :height => "300px", :title => "More like Pou rover, Am I right?" %>
 	</div>
 
 	<p>Hypothesis:</p>
@@ -80,11 +79,11 @@
 		<li>- Two warmed mugs</li>
 	</ol>
 
-	<%= image_tag "coffee-experiments-square-small-mug.png", :height => "100px" %>
-	<%= image_tag "coffee-experiments-square-scale.png", :height => "100px" %>
-	<%= image_tag "coffee-experiments-square-beans.png", :height => "100px" %>
-	<%= image_tag "coffee-experiments-square-kettle-2.png", :height => "100px" %>
-	<%= image_tag "coffee-experiments-square-v60-2.png", :height => "100px" %>
+	<%= image_tag "thumbs/coffee-experiments-square-small-mug.png", :height => "100px" %>
+	<%= image_tag "thumbs/coffee-experiments-square-scale.png", :height => "100px" %>
+	<%= image_tag "thumbs/coffee-experiments-square-beans.png", :height => "100px" %>
+	<%= image_tag "thumbs/coffee-experiments-square-kettle-2.png", :height => "100px" %>
+	<%= image_tag "thumbs/coffee-experiments-square-v60-2.png", :height => "100px" %>
 
 	<p>Procedures</p>
 		
@@ -98,7 +97,7 @@
 				<td style="text-align: center">
 					<div>
 						<a href="<%=methods_pourover_path %>">
-								<%= image_tag "coffee-experiments-sq-pourover.png", :height => "100px" %><br/>
+								<%= image_tag "thumbs/coffee-experiments-sq-pourover.png", :height => "100px" %><br/>
 							Pourover
 						</a>
 					</div>
@@ -106,7 +105,7 @@
 				<td style="text-align: center">
 					<div>
 						<a href="<%=methods_aeropress_path %>">
-							<%= image_tag "coffee-experiments-sq-aeropress.png", :height => "100px" %><br/>
+							<%= image_tag "thumbs/coffee-experiments-sq-aeropress.png", :height => "100px" %><br/>
 							Aeropress
 						</a>
 					</div>
@@ -127,7 +126,7 @@
 	</ol>
 
 	<div style="padding-top:70px">
-		<%= image_tag "coffee-experiments-glasses.png", :height=>"50px" %>
+		<%= image_tag "thumbs/coffee-experiments-glasses.png", :height=>"50px" %>
 	</div>
 
 	<p style="padding-top:0px">Observations</p>
@@ -141,7 +140,7 @@
 		We enjoyed the aeropress more than the V-60 pour over, but both made enjoyable brews. Both apparatuses are easy to clean up and interactive to use, so those aspects would not influence the decision of which method to use. Rather I would think about if my bean was more suited to the richer more whole bodied flavor of the aeropress, or the simpler and bolder result of the V-60. After talking to the owner at Wrecking Balll Coffee in SF, who uses the Kalita pour over, he explained that the cone shaped V-60 was developed in Japan where they like a lighter and simpler flavor coffee. The Kalita pour over is not cone shaped , but rather more cylindrical allowing the water to have more time to immerse the beans and extract their flavors. It would seem that an experiment is needed to investigate different pour over methods…
 	</p>
 
-	<%= image_tag "coffee-experiments-science-dripper.png", :height => "300px" %>
+	<%= image_tag "thumbs/coffee-experiments-science-dripper.png", :height => "300px" %>
 
 
 </div>
