--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -2,8 +2,8 @@
 
 <div class=ideas>
   <div>
-      <%= image_tag "coffee-experiements-stand.jpg", :height => "400px"%>
-      <%= image_tag "coffee-experiments-caltrain-cozy.jpg", :height => "400px"%>
+      <%= image_tag "thumbs/coffee-experiements-stand.jpg", :height => "400px"%>
+      <%= image_tag "thumbs/coffee-experiments-caltrain-cozy.jpg", :height => "400px"%>
   </div>
 
   <p>
@@ -13,9 +13,9 @@
 
 <div class=ideas>
   <div>
-    <%= image_tag "coffee-experiments-sightglass-4.jpg", :height => "270px"%>
-    <%= image_tag "coffee-experiments-sightglass-1.jpg", :height => "270px"%>
-    <%= image_tag "coffee-experiments-soy-coldbrew.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-sightglass-4.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-sightglass-1.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-soy-coldbrew.jpg", :height => "270px"%>
   </div>
 
   <p>
@@ -25,8 +25,8 @@
 
 <div class=ideas>
   <div>
-    <%= image_tag "coffee-experiments-fourbarrel-jars.jpg", :height => "300px"%>
-    <%= image_tag "coffee-experiments-fourbarrel-roaster.jpg", :height => "300px"%>
+    <%= image_tag "thumbs/coffee-experiments-fourbarrel-jars.jpg", :height => "300px"%>
+    <%= image_tag "thumbs/coffee-experiments-fourbarrel-roaster.jpg", :height => "300px"%>
 
   </div>
 
@@ -37,8 +37,8 @@
 
 <div class=ideas>
   <div>
-    <%= image_tag "coffee-experiments-siphon-brewer.jpg",:height => "300px"%>
-    <%= image_tag "coffee-experiments-bluemountain.jpg", :height => "300px"%>
+    <%= image_tag "thumbs/coffee-experiments-siphon-brewer.jpg",:height => "300px"%>
+    <%= image_tag "thumbs/coffee-experiments-bluemountain.jpg", :height => "300px"%>
   </div>
 
   <p>
@@ -49,8 +49,8 @@
 
 <div class=ideas>
   <div>
-    <%= image_tag "coffee-experiments-stumptown-1.jpg", :height => "270px"%>
-		<%= image_tag "coffee-experiments-cup-stumptown.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-stumptown-1.jpg", :height => "270px"%>
+		<%= image_tag "thumbs/coffee-experiments-cup-stumptown.jpg", :height => "270px"%>
   </div>
 
   <p>
@@ -60,8 +60,8 @@
 
 <div class=ideas>
   <div>
-    <%= image_tag "coffee-experiments-wreckingball-1.jpg", :height => "300px"%>
-    <%= image_tag "coffee-experiments-wreckingball-2.jpg", :height => "300px"%>
+    <%= image_tag "thumbs/coffee-experiments-wreckingball-1.jpg", :height => "300px"%>
+    <%= image_tag "thumbs/coffee-experiments-wreckingball-2.jpg", :height => "300px"%>
   </div>
 
   <p>
@@ -71,9 +71,9 @@
 
 <div class=ideas>
   <div>
-    <%= image_tag "coffee-experiments-contraband-1.jpg", :height => "270px"%>
-    <%= image_tag "coffee-experiments-contraband-4.jpg", :height => "270px"%>
-    <%= image_tag "coffee-experiments-contraband-3.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-contraband-1.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-contraband-4.jpg", :height => "270px"%>
+    <%= image_tag "thumbs/coffee-experiments-contraband-3.jpg", :height => "270px"%>
   </div>
 
   <p>
@@ -81,30 +81,35 @@
   </p>
 
 
-<%= image_tag "coffee-experiments-sightglass-2.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-hario-grinder-sightglass.jpg",:height => "300px"%>
-<%= image_tag "coffee-experiments-sightglass-7.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-sightglass-2.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-hario-grinder-sightglass.jpg",:height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-sightglass-7.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-sightglass-5.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-sightglass-6.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-contraband-2.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-contraband-5.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-wreckingball-3.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-sightglass-5.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-sightglass-6.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-contraband-2.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-contraband-5.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-wreckingball-3.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-four-barrel-beans.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-mug-side-pigpepper.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-four-barrel-beans.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-mug-side-pigpepper.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-cup-transfer.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-cup-transfer.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-masonjar.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-mug-rack.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-sign.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-siphon-maker.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-masonjar.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-mug-rack.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-sign.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-siphon-maker.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-coffeeshop.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-sightglass-8.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-clever-sightglass.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-coffeeshop.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-sightglass-8.jpg", :height => "300px"%>
+<%= image_tag "thumbs/coffee-experiments-clever-sightglass.jpg", :height => "300px"%>
 
 
+<%= image_tag "coffee_experiments_howtobuildabike.png", :height => "200px", :title => "coffe and bicycles combine = a caffeinated ride!" %>
 
+<center><p style="margin: auto; display: inline-block" class="experiment">
+  If you enjoyed this, you will probably also enjoy <a class=linktosite href="https://howtobuilda.bike">
+  How to Build a Bicycle </a>
+</p></center>
 
