--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+        <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
   <header>
     <h6>
       The Coffee Experiments
     </h6>
+
+    <div class=twittericon><a href="https://twitter.com/molly_mc_neil" class="twitter-follow-button" data-show-count="false">Follow @molly_mc_neil</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+      </script>
+    </div>
+
+    <div class=facebookicon>
+      <div class="fb-like" data-href="https://experiments.coffee" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+    </div>
+
   	<nav>
       <table class=nav>
         <tr>
