added go-to image for facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 
   <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
+<meta property="og:image" content="http://experiments.coffee/coffee-experiments-square-beans.png"/>
+<meta property="og:image:secure_url" content="https://experiments.coffee/coffee-experiments-square-beans.png" />
+
 </head>
 <body>
         <div id="fb-root"></div>
