fixed coffe typo

--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -1,7 +1,7 @@
 <h1> The Coffee Experiments </h1>
 <div>
 	<div>
-		<p>How do you enjoy your daily brew? There is a rapidly growing coffe culture and various brewing methods. Are we succumbing to the allure of hipster peer pressure or do all of these intricate gadgets actually make a difference? Thus the Coffee Experiments began.</p>
+		<p>How do you enjoy your daily brew? There is a rapidly growing coffee culture and various brewing methods. Are we succumbing to the allure of hipster peer pressure or do all of these intricate gadgets actually make a difference? Thus the Coffee Experiments began.</p>
 
 		<%= image_tag "thumbs/collage-photo-coffee-experiments.jpg", :width => "700px", :title => "Oui oui, j'aime le cafe beaucoup!" %>
 	<div>
